# os_lab6.-Creating-GUI-for-server

./: CMakeLists.txt  README.md  install_deps.sh  test.sh
include/: api_client.h
scripts/: build_linux.sh  build_windows.cmd
src/: api_client.c  main.c
